--- a/package.json
+++ b/package.json
@@ -5,20 +5,43 @@
   "engines": {
     "ghost-api": "v2"
   },
-  "author": {
-    "name": "Joseph Schultz",
-    "email": "joseph@acupajoe.io"
-  },
+  "license": "MIT",
   "scripts": {
     "develop": "gulp develop",
-    "build": "gulp build"
+    "build": "gulp build",
+    "test": "gscan ."
   },
-  "keywords": [
-    "ghost-theme"
-  ],
   "browserslist": [
     "last 2 versions"
   ],
+  "author": {
+    "name": "Joseph Schultz",
+    "email": "joseph@acupajoe.io",
+    "url": "https://acupajoe.io"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/acupajoe/ghost-simplex-theme.git"
+  },
+  "bugs": "https://github.com/acupajoe/ghost-simple-theme/issues",
+  "keywords": [
+    "ghost",
+    "theme",
+    "ghost-theme"
+  ],
+  "devDependencies": {
+    "browser-sync": "^2.26.7",
+    "gscan": "^2.6.4",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-cli": "^2.2.0",
+    "gulp-csso": "^3.0.1",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
+    "gulp-zip": "^5.0.0"
+  },
   "config": {
     "posts_per_page": 10,
     "image_sizes": {
@@ -41,17 +64,5 @@
         "width": 2000
       }
     }
-  },
-  "devDependencies": {
-    "browser-sync": "^2.26.7",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^6.1.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-cli": "^2.2.0",
-    "gulp-csso": "^3.0.1",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
-    "gulp-zip": "^5.0.0"
   }
 }
