--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "gulp-csso": "^3.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
+    "gulp-uglifyes": "^0.2.1",
     "gulp-zip": "^5.0.0"
   },
   "config": {
